--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-yo wsp
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>wxksippa's Social Links</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f7f7f7;
+      text-align: center;
+      padding: 50px;
+    }
+    .social-links {
+      list-style: none;
+      padding: 0;
+      margin: 30px auto;
+      max-width: 400px;
+    }
+    .social-links li {
+      margin: 20px 0;
+    }
+    .social-links a {
+      text-decoration: none;
+      font-size: 1.2em;
+      color: #3366cc;
+      transition: color 0.2s;
+    }
+    .social-links a:hover {
+      color: #ff6600;
+    }
+  </style>
+</head>
+<body>
+  <h1>Connect with wxksippa</h1>
+  <ul class="social-links">
+    <li><a href="https://youtube.com/@wxksippa" target="_blank">YouTube</a></li>
+    <li><a href="/index.html" target="_blank">Discord</a></li>
+    <li><a href="https://soundcloud.com/wxksippa" target="_blank">SoundCloud</a></li>
+    <li><a href="https://tiktok.com/@wxksippa" target="_blank">TikTok</a></li>
+  </ul>
+</body>
+</html>
