--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <h1>Connect with wxksippa</h1>
   <ul class="social-links">
     <li><a href="https://youtube.com/@wxksippa" target="_blank">YouTube</a></li>
-    <li><a href="/index.html" target="_blank">Discord</a></li>
+    <li><a href="https://discord.gg/hNaTByGTvs" target="_blank">Discord</a></li>
     <li><a href="https://soundcloud.com/wxksippa" target="_blank">SoundCloud</a></li>
     <li><a href="https://tiktok.com/@wxksippa" target="_blank">TikTok</a></li>
   </ul>
