--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 <body>
   <h1>Connect with wxksippa</h1>
   <ul class="social-links">
-    <li><a href="https://youtube.com/@wxksippa" target="_blank">YouTube</a></li>
-    <li><a href="https://discord.gg/hNaTByGTvs" target="_blank">Discord</a></li>
-    <li><a href="https://soundcloud.com/wxksippa" target="_blank">SoundCloud</a></li>
-    <li><a href="https://tiktok.com/@wxksippa" target="_blank">TikTok</a></li>
+    <li><a href="https://youtube.com/@wxksippa" target="_blank">youTube</a></li>
+    <li><a href="https://discord.gg/hNaTByGTvs" target="_blank">siscord</a></li>
+    <li><a href="https://soundcloud.com/wxksippa" target="_blank">soundcloud</a></li>
+    <li><a href="https://tiktok.com/@wxksippa" target="_blank">tiktok</a></li>
   </ul>
 </body>
 </html>
