--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </style>
 </head>
 <body>
-  <h1>Connect with wxksippa</h1>
+  <h1>connect with wxksippa</h1>
   <ul class="social-links">
     <li><a href="https://youtube.com/@wxksippa" target="_blank">youTube</a></li>
     <li><a href="https://discord.gg/hNaTByGTvs" target="_blank">siscord</a></li>
