--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <h1>connect with wxksippa</h1>
   <ul class="social-links">
     <li><a href="https://youtube.com/@wxksippa" target="_blank">youTube</a></li>
-    <li><a href="https://discord.gg/hNaTByGTvs" target="_blank">siscord</a></li>
+    <li><a href="https://discord.gg/hNaTByGTvs" target="_blank">discord</a></li>
     <li><a href="https://soundcloud.com/wxksippa" target="_blank">soundcloud</a></li>
     <li><a href="https://tiktok.com/@wxksippa" target="_blank">tiktok</a></li>
   </ul>
