--- a/index.html
+++ b/index.html
@@ -2,41 +2,124 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>wxksippa's Social Links</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>wxksippa's Connect Hub</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f7f7f7;
-      text-align: center;
-      padding: 50px;
+    :root {
+      --primary-color: #5a2c91; /* A deep purple */
+      --secondary-color: #8c52ff; /* A lighter purple */
+      --text-color: #333;
+      --background-color: #f0f2f5;
+      --card-background: #ffffff;
+      --border-radius: 12px;
     }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: var(--background-color);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+      color: var(--text-color);
+      box-sizing: border-box;
+      padding: 20px; /* Add some padding for smaller screens */
+    }
+
+    .container {
+      background: var(--card-background);
+      border-radius: var(--border-radius);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      padding: 40px;
+      max-width: 480px;
+      width: 100%;
+      text-align: center;
+      box-sizing: border-box; /* Include padding in the element's total width and height */
+    }
+
+    .profile-picture {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 25px;
+      border: 4px solid var(--primary-color);
+      box-shadow: 0 0 0 6px rgba(140, 82, 255, 0.2);
+    }
+
+    h1 {
+      color: var(--primary-color);
+      font-size: 2.2em;
+      margin-bottom: 10px;
+      font-weight: 700;
+    }
+
+    .tagline {
+      font-size: 1.1em;
+      color: #666;
+      margin-top: 0;
+      margin-bottom: 35px;
+      font-weight: 400;
+    }
+
     .social-links {
       list-style: none;
       padding: 0;
-      margin: 30px auto;
-      max-width: 400px;
+      margin: 0;
     }
+
     .social-links li {
-      margin: 20px 0;
+      margin: 18px 0;
     }
+
     .social-links a {
       text-decoration: none;
-      font-size: 1.2em;
-      color: #3366cc;
-      transition: color 0.2s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: var(--primary-color);
+      color: #ffffff;
+      padding: 16px 25px;
+      border-radius: 8px;
+      font-size: 1.1em;
+      font-weight: 600;
+      transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.2s ease;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
+
     .social-links a:hover {
-      color: #ff6600;
+      background-color: var(--secondary-color);
+      transform: translateY(-3px);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
     }
-  </style>
-</head>
-<body>
-  <h1>connect with wxksippa</h1>
-  <ul class="social-links">
-    <li><a href="https://youtube.com/@wxksippa" target="_blank">youTube</a></li>
-    <li><a href="https://discord.gg/hNaTByGTvs" target="_blank">discord</a></li>
-    <li><a href="https://soundcloud.com/wxksippa" target="_blank">soundcloud</a></li>
-    <li><a href="https://tiktok.com/@wxksippa" target="_blank">tiktok</a></li>
-  </ul>
-</body>
-</html>
+
+    .social-links a i {
+      margin-right: 12px;
+      font-size: 1.3em;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 600px) {
+      .container {
+        padding: 30px 20px;
+        margin: 20px; /* Add margin on smaller screens */
+      }
+      h1 {
+        font-size: 1.8em;
+      }
+      .tagline {
+        font-size: 1em;
+      }
+      .profile-picture {
+        width: 100px;
+        height: 100px;
+      }
+      .social-links a {
+        padding: 14px 20px;
+        font-size: 1em;
+      }
