--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     :root {
-      /* Dark Theme Colors */
-      --primary-color: #BB86FC; /* A vibrant, light purple (for accents/buttons) */
-      --secondary-color: #6200EE; /* A deeper purple (for hover/more subtle accents) */
+      /* Dark Theme Yellow Colors */
+      --primary-color: #FFD700; /* Gold/bright yellow for accents/buttons */
+      --secondary-color: #FFA500; /* Orange-yellow for hover/subtle accents */
       --text-color-light: #E0E0E0; /* Light text for dark backgrounds */
       --text-color-medium: #B0B0B0; /* Slightly darker text for less emphasis */
       --background-color: #121212; /* Very dark background */
@@ -45,26 +45,17 @@
       box-sizing: border-box;
     }
 
-    .profile-picture {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 25px;
-      border: 4px solid var(--primary-color); /* Highlight with primary color */
-      box-shadow: 0 0 0 6px rgba(187, 134, 252, 0.2); /* Soft glow with primary color */
-    }
-
     h1 {
       color: var(--primary-color);
       font-size: 2.2em;
+      margin-top: 0; /* Adjusted to remove space at the top after removing image */
       margin-bottom: 10px;
       font-weight: 700;
     }
 
     .tagline {
       font-size: 1.1em;
-      color: var(--text-color-medium); /* Slightly less prominent than heading */
+      color: var(--text-color-medium);
       margin-top: 0;
       margin-bottom: 35px;
       font-weight: 400;
@@ -85,7 +76,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: var(--primary-color); /* Button background */
+      background-color: var(--primary-color);
       color: var(--background-color); /* Text color for buttons (dark) */
       padding: 16px 25px;
       border-radius: 8px;
@@ -96,7 +87,7 @@
     }
 
     .social-links a:hover {
-      background-color: var(--secondary-color); /* Darker purple on hover */
+      background-color: var(--secondary-color);
       transform: translateY(-3px);
       box-shadow: 0 6px 15px var(--shadow-color);
     }
@@ -119,10 +110,6 @@
       .tagline {
         font-size: 1em;
       }
-      .profile-picture {
-        width: 100px;
-        height: 100px;
-      }
       .social-links a {
         padding: 14px 20px;
         font-size: 1em;
@@ -132,7 +119,6 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://via.placeholder.com/120" alt="wxksippa profile" class="profile-picture">
     <h1>wxksippa</h1>
     <p class="tagline">Music Producer | Content Creator | Beatmaker</p>
 
@@ -140,8 +126,7 @@
       <li><a href="https://youtube.com/@wxksippa" target="_blank"><i class="fab fa-youtube"></i> YouTube</a></li>
       <li><a href="https://discord.gg/hNaTByGTvs" target="_blank"><i class="fab fa-discord"></i> Discord</a></li>
       <li><a href="https://soundcloud.com/wxksippa" target="_blank"><i class="fab fa-soundcloud"></i> SoundCloud</a></li>
-      <li><a href="https://www.tiktok.com/@wxksippa" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a></li>
-      <li><a href="https://twitter.com/wxksippa" target="_blank"><i class="fab fa-twitter"></i> Twitter/X</a></li>
+      <li><a href="https://tiktok.com/@wxksippa" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a></li>
       <li><a href="https://instagram.com/wxksippa" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
     </ul>
   </div>
