--- a/index.html
+++ b/index.html
@@ -32,7 +32,50 @@
       color: var(--text-color-light); /* Default text color */
       box-sizing: border-box;
       padding: 20px;
+      overflow: hidden; /* Hide scrollbars from the star animation */
     }
+
+    /* --- Scrolling Stars Background --- */
+    @keyframes animateStars {
+      from {
+        transform: translateY(0px);
+      }
+      to {
+        transform: translateY(-2000px);
+      }
+    }
+
+    .stars {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 2000px; /* Taller than viewport to allow for seamless scrolling */
+      z-index: -1;
+    }
+
+    #stars1 {
+      background: transparent url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><circle cx="1" cy="1" r="1" fill="white"/></svg>') repeat;
+      background-size: 1px 1px;
+      background-position: center;
+      animation: animateStars 150s linear infinite;
+    }
+
+    #stars2 {
+      background: transparent url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><circle cx="1" cy="1" r="1" fill="white"/></svg>') repeat;
+      background-size: 2px 2px;
+      background-position: center;
+      animation: animateStars 100s linear infinite;
+    }
+
+    #stars3 {
+      background: transparent url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><circle cx="1.5" cy="1.5" r="1.5" fill="white"/></svg>') repeat;
+      background-size: 3px 3px;
+      background-position: center;
+      animation: animateStars 75s linear infinite;
+    }
+    /* --- End of Stars Background --- */
+
 
     .container {
       background: var(--card-background);
@@ -43,12 +86,13 @@
       width: 100%;
       text-align: center;
       box-sizing: border-box;
+      z-index: 1; /* Ensure container is on top of the stars */
     }
 
     h1 {
       color: var(--primary-color);
       font-size: 2.2em;
-      margin-top: 0; /* Adjusted to remove space at the top after removing image */
+      margin-top: 0;
       margin-bottom: 10px;
       font-weight: 700;
     }
@@ -118,6 +162,10 @@
   </style>
 </head>
 <body>
+  <div id="stars1" class="stars"></div>
+  <div id="stars2" class="stars"></div>
+  <div id="stars3" class="stars"></div>
+
   <div class="container">
     <h1>wxksippa</h1>
     <p class="tagline">Music Producer | Content Creator | Beatmaker</p>
