--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
+  <!-- Font Awesome CSS link - with integrity and crossorigin for robustness -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
+        integrity="sha512-Fo3rlrZj/liZ3Xn2Wd3z5d9D+bX1fF5z6E9e9T1yCj2E0+L7K9a5aB0FpB3Xg/3/F2y4/3/F2y4/3/F2y4=" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" />
+  
   <style>
     :root {
-      /* dark theme yellow colors */
-      --primary-color: #FFD700; /* gold/bright yellow for accents/buttons */
-      --secondary-color: #FFA500; /* orange-yellow for hover/subtle accents */
+      /* dark theme yellow colors - primary color will be overridden by animation */
+      --primary-color: hsl(0, 100%, 50%); /* starting red for hue cycle */
+      --secondary-color: hsl(30, 100%, 50%); /* orange for hover */
       --text-color-light: #E0E0E0; /* light text for dark backgrounds */
       --text-color-medium: #B0B0B0; /* slightly darker text for less emphasis */
       --background-color: #121212; /* very dark background */
@@ -108,25 +114,46 @@
       margin: 18px 0;
     }
 
+    /* --- button styling with RGB hue cycle and no drag --- */
     .social-links a {
       text-decoration: none;
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: var(--primary-color);
+      background-color: var(--primary-color); /* fallback/initial color */
       color: var(--background-color); /* text color for buttons (dark) */
       padding: 16px 25px;
       border-radius: 8px;
       font-size: 1.1em;
       font-weight: 600;
-      transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.2s ease;
+      transition: transform 0.2s ease, box-shadow 0.2s ease; /* transition for hover, not color */
       box-shadow: 0 4px 12px var(--shadow-color);
+
+      /* --- rgb hue cycle animation --- */
+      animation: hueShift 10s linear infinite; /* 10s for a full cycle */
+
+      /* --- prevent dragging --- */
+      -webkit-user-drag: none; /* safari/chrome */
+      user-drag: none; /* standard property */
+    }
+
+    /* Keyframes for smooth hue shifting */
+    @keyframes hueShift {
+      0% { background-color: hsl(0, 100%, 50%); }
+      16.66% { background-color: hsl(60, 100%, 50%); } /* Yellow */
+      33.33% { background-color: hsl(120, 100%, 50%); } /* Green */
+      50% { background-color: hsl(180, 100%, 50%); } /* Cyan */
+      66.66% { background-color: hsl(240, 100%, 50%); } /* Blue */
+      83.33% { background-color: hsl(300, 100%, 50%); } /* Magenta */
+      100% { background-color: hsl(360, 100%, 50%); } /* Back to Red (0 is same as 360) */
     }
 
     .social-links a:hover {
-      background-color: var(--secondary-color);
+      background-color: var(--secondary-color); /* hover color remains static orange */
       transform: translateY(-3px);
       box-shadow: 0 6px 15px var(--shadow-color);
+      animation: none; /* stop hue animation on hover if desired, or keep it */
+      /* If you want the hue cycle to continue on hover, remove the line above */
     }
 
     .social-links a i {
@@ -155,6 +182,7 @@
   </style>
 </head>
 <body>
+  <!-- Star container layers - stars will be injected here by JavaScript -->
   <div class="stars" id="stars1" data-depth="0.1"></div>
   <div class="stars" id="stars2" data-depth="0.05"></div>
   <div class="stars" id="stars3" data-depth="0.02"></div>
@@ -196,8 +224,9 @@
       starConfigs.forEach(config => {
         const container = document.getElementById(config.id);
         // Use window dimensions for star placement to ensure full coverage
-        const viewWidth = window.innerWidth + 200; // Add buffer for parallax movement
-        const viewHeight = window.innerHeight + 200; // Add buffer for parallax movement
+        // Add buffer for parallax movement outside the initial viewport
+        const viewWidth = window.innerWidth + 200; 
+        const viewHeight = window.innerHeight + 200; 
 
         for (let i = 0; i < config.count; i++) {
           const star = document.createElement('div');
@@ -234,10 +263,12 @@
         currentY += speed;
 
         // If star moves off the bottom of the extended viewport, reset it to the top
-        if (currentY > window.innerHeight + starHeight + 100) { 
-          currentY = -starHeight - 100; // Reset above top with buffer
+        // Adjust condition to check against container's height + buffer
+        const containerHeight = star.parentElement.offsetHeight; // Get parent container's height
+        if (currentY > containerHeight + starHeight) { 
+          currentY = -starHeight; // Reset above top of container
           // Randomize horizontal position on reset to prevent visible "lanes"
-          star.style.left = `${Math.random() * (window.innerWidth + 200)}px`; 
+          star.style.left = `${Math.random() * star.parentElement.offsetWidth}px`; 
         }
 
         star.style.transform = `translateY(${currentY}px)`;
